updated payment status
